Fixing menu overflow issue.

--- a/harness/style/sass/_getmdl-select.scss
+++ b/harness/style/sass/_getmdl-select.scss
@@ -19,7 +19,7 @@
     }
   }
 }
-.getmdl-select__fullwidth, .mdl-menu {
+.getmdl-select__fullwidth {
   width: 100%;
 }
 
